config/samples/network_v1_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
  annotations:
    k8s.checklyhq.com/enabled: "true"
    # k8s.checklyhq.com/endpoint: "foo.baaz" - Default read from spec.rules[*].host
    k8s.checklyhq.com/group: "group-sample"
    # k8s.checklyhq.com/muted: "false" # If not set, default "true"
    # k8s.checklyhq.com/path: "/baz" - Default read from spec.rules[*].http.paths[*].path
    # k8s.checklyhq.com/success: "200" - Default "200"
spec:
  rules:
    - host: "foo.bar"
      http:
        paths:
          - path: /foo
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-service
                port:
                  number: 8080
          - path: /bar
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-service
                port:
                  number: 8080
    - host: "example.com"
      http:
        paths:
          - path: /tea
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-service
                port:
                  number: 8080
          - path: /coffee
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-service
                port:
                  number: 8080
